psoc/psoc/Ultrasonic_test.cydsn/REBUILD.log
--------------- Rebuild Started: 03/04/2019 10:38:46 Project: hcsr04.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/hcsr04.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c hcsr04.c -o .\CortexM3\ARM_GCC_541\Debug\hcsr04.o
hcsr04.c: In function 'get_hc_sr04':
hcsr04.c:32:40: error: expected expression before ')' token
     return (counter * CORRECTION_FACTOR) + ERRROR_CORRECTION;
                                        ^
hcsr04.c:33:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/04/2019 10:38:46 ---------------
